--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -14,20 +14,20 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="og:title" content="Museum Design & Cultural Spaces by Vicky Wang">
   <meta property="og:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="og:url" content="https://vickywang.me/architecture">
+  <meta property="og:url" content="https://vickywang.me/architecture/LACAMA">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://vickywang.me/architecture">
-  <meta property="twitter:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="twitter:url" content="https://vickywang.me/architecture/LACAMA">
+  <meta property="twitter:title" content="Museum Design & Cultural Spaces by Vicky Wang">
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="twitter:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
 
   <!-- favicon -->
 
