--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Basic Metadata -->
   <link rel="canonical" href="https://vickywang.me/">
   <title>Skilled UX Designer for B2B Solutions & Consumer Apps - Vicky Wang </title>
-  <meta name="title" content="UX Designer for B2B Solutions & Consumer Apps">
+  <meta name="title" content="Skilled UX Designer for B2B Solutions & Consumer Apps - Vicky Wang">
   <meta name="author" content="Vicky W.">
   <meta name="description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
@@ -21,7 +21,7 @@
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -29,7 +29,7 @@
   <meta property="twitter:title" content="Skilled UX Designer for B2B Solutions & Consumer Apps - Vicky Wang">
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="twitter:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
 
   <!-- favicon -->
 
@@ -422,8 +422,7 @@
     <div class="blankHM"></div>
 
     <div class="Grid Grid--full u-textCenter">
-
-      <ul class="tags">
+      <ul class="tags" id="TagsCloud">
 
         <li class="tag"><span class="box"> User-centered Design</span></li>
 
@@ -433,6 +432,8 @@
         <li class="tag"><span class="box"> Interaction Design</span></li>
 
         <li class="tag"><span class="box"> Product Design</span></li>
+        <li class="tag"><span class="box"> Service Design</span></li>
+
         <li class="tag"><span class="box"> Design Thinking</span></li>
         <li class="tag"><span class="box"> Surveys &#38; Questionnaires</span></li>
         <li class="tag"><span class="box"> Journey Mapping </span></li>
@@ -453,6 +454,11 @@
         <li class="tag"><span class="box"> Concept Testing</span></li>
         <li class="tag"><span class="box"> Usability Testing</span></li>
         <li class="tag"><span class="box"> Wireframing &#38; Prototyping</span></li>
+
+        <li class="tag"><span class="box"> SaaS Application Design</span></li>
+        <li class="tag"><span class="box"> B2B Application Design</span></li>
+        <li class="tag"><span class="box"> Consumer-Facing Design</span></li>
+
 
         <li class="tag"><span class="box"> Figma</span></li>
         <li class="tag"><span class="box"> Adobe CS </span></li>
