--- a/navigation/V1/index.html
+++ b/navigation/V1/index.html
@@ -9,27 +9,28 @@
 
   <!-- Basic Metadata -->
   <link rel="canonical" href="https://vickywang.me/navigation/V1/">
-  <title>Exploring Navigation Design Version 1 - Vicky Wang</title>
+  <title>Exploring Navigation Design V1 - Interface Design & User Experience by Vicky Wang</title>
   <meta name="author" content="Vicky W.">
-  <meta name="description"
-    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta name="description" content="Dive into Navigation V1 System by Vicky Wang, featuring advanced interface design and enhanced user experience. Pioneering digital navigation solutions.">
+
+
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="og:title" content="Exploring Navigation Design V1 - Interface Design & User Experience by Vicky Wang">
   <meta property="og:description"
-    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+    content="Dive into Navigation V1 System by Vicky Wang, featuring advanced interface design and enhanced user experience. Pioneering digital navigation solutions.">
   <meta property="og:url" content="https://vickywang.me/navigation/V1/">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/navigation/V1/">
-  <meta property="twitter:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="twitter:title" content="Exploring Navigation Design V1 - Interface Design & User Experience by Vicky Wang">
   <meta property="twitter:description"
-    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="twitter:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
+    content="Dive into Navigation V1 System by Vicky Wang, featuring advanced interface design and enhanced user experience. Pioneering digital navigation solutions.">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
 
   <!-- favicon -->
 
@@ -107,9 +108,9 @@
 
     <div class="backgroundColorNav">
 
-      <a href="/navigation/" class="centerVer logo pointer colorBlack Grid--center"><img class="moveLeftRight iconXS"
+      <a href="/navigation/" class="centerVer logo pointer colorBlack Grid--center"><img class="moveLeftRight iconS"
           src="../../icon/arrow-back.svg" alt="Go back">
-        <h5>BACK</h5>
+        <h6>BACK</h6>
       </a>
       <div class="navbar">
         <ul class="nav-menu">
@@ -142,7 +143,7 @@
               </a>
               <a href="/design_system/">
                 <div class="cardBorder ">
-                  <img src="../../ProjectImages/Cover_portfolioWeb.png" alt="Design System">
+                  <img src="../../ProjectImages/Cover_portfolioWeb.svg" alt="Design System">
                   <div class="element">
                     <h5 class="colorBlack">Design System | vickywang.me</h5>
                   </div>
@@ -1172,29 +1173,129 @@
 
 
 
-  <!--footer-->
-  <footer class="GreyBg100">
-    <div class="element">
-      <div class="footer">
-        <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
-        <div class="footer-right">
-          <a href="mailto:vickyw.design@gmail.com">
-            <img class="footer-logo" src="../../icon/mail.svg" alt="email">
-          </a>
-          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
-            <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
-          </a>
-          <a target="_blank" href="https://github.com/vicky-wyq">
-            <img class="footer-logo" src="../../icon/git.svg" alt="github">
-          </a>
-          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-            <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
-          </a>
+    <!--footer-->
+    <footer class="GreyBg100">
+
+      <div class="blankHS"></div>
+      <div class="wrapper">
+        <div class="element">
+  
+          <div class="Grid Grid--gutters Grid--1of3">
+            <div class="Grid-cell">
+  
+              <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+              <div class="blankHXS"></div>
+  
+              <div class="Grid Grid--gutters">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly">
+                    <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                      title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
+                    <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                  </button>
+                </div>
+                <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+                  <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
+                </a>
+  
+                <a target="_blank" href="https://github.com/vicky-wyq">
+                  <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub"
+                    title="GitHub">
+                </a>
+  
+                <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+                  <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
+                </a>
+  
+                <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+                  <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
+                    title="Instagram">
+                </a>
+              </div>
+              <div class="blankHXS"></div>
+            </div>
+            <div class="Grid-cell">
+              <div class="Grid Grid--gutters Grid--cols-6">
+                <div class="Grid-cell">
+                  <h5> <strong> Project </strong> </h5>
+                  <div class="blankHXXS"></div>
+                  <a href="/glorify/">
+                    <h6 class="fontWeight400"> Glorify</h6>
+                  </a>
+  
+  
+                  <h6>Elevating Community Involvement</h6>
+                  <div class="blankHXXS"></div>
+                  <a href="/appointa/">
+                    <h6 class="fontWeight400"> APPOINTA</h6>
+  
+                  </a>
+                  <h6>Simplifying Interview Coordination</h6>
+                  <div class="blankHXXS"></div>
+                  <a href="/seer/">
+                    <h6 class="fontWeight400">SEER</h6>
+  
+                  </a>
+                  <h6>Empowering Brand Managers with Insights</h6>
+                </div>
+  
+                <div class="Grid-cell">
+                  <h5> <strong> Service </strong> </h5>
+                  <div class="blankHXXS"></div>
+  
+                  <a href="/">
+                    <h6 class="fontWeight400">UX/UI Design</h6>
+                  </a>
+                  <h6>Creating Intuitive User Experiences</h6>
+                  <div class="blankHXXS"></div>
+  
+                  <a href="/">
+                    <h6 class="fontWeight400">Design Research</h6>
+                  </a>
+                  <h6>In-depth Analysis for Targeted Solutions</h6>
+                  <div class="blankHXXS"></div>
+                  <a href="/">
+                    <h6 class="fontWeight400">Web Development</h6>
+                  </a>
+                  <h6>Seamless Design Implementation</h6>
+                  <div class="blankHXXS"></div>
+                  <a href="/">
+                    <h6 class="fontWeight400">Branding</h6>
+                  </a>
+                  <h6>Crafting Memorable Brand Identities</h6>
+                </div>
+  
+                <div class="Grid-cell">
+                  <h5> <strong> About </strong> </h5>
+                  <div class="blankHXXS"></div>
+  
+                  <a href="/about">
+                    <h6>About me</h6>
+                  </a>
+                  <a href="mailto:vickyw.design@gmail.com">
+                    <h6>Email me</h6>
+                  </a>
+                </div>
+              </div>
+  
+            </div>
+          </div>
+        </div>
+        <div class="blankHS"></div>
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="footerBorder">
+              <div class="element">
+                <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
-  <!--footer-->
+  
+    </footer>
+    <!--footer-->
+
 
 
 
