--- a/navigation/index.html
+++ b/navigation/index.html
@@ -8,27 +8,28 @@
 
   <!-- Basic Metadata -->
   <link rel="canonical" href="https://vickywang.me/navigation/V3/">
-  <title>Exploring Navigation Design Version 3 - Vicky Wang</title>
+  <title>Navigation Solutions - User Interface & Digital Experience by Vicky Wang</title>
   <meta name="author" content="Vicky W.">
-  <meta name="description"
-    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta name="description" content="Explore Vicky Wang's solutions in advanced navigation, focusing on user interface and digital experiences. Innovative designs enhancing user interaction and functionality.">
+
+
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
   <meta property="og:description"
-    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+    content="Explore Vicky Wang's solutions in advanced navigation, focusing on user interface and digital experiences. Innovative designs enhancing user interaction and functionality.">
   <meta property="og:url" content="https://vickywang.me/navigation/V3/">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/navigation/V3/">
   <meta property="twitter:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
   <meta property="twitter:description"
-    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="twitter:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
+    content="Explore Vicky Wang's solutions in advanced navigation, focusing on user interface and digital experiences. Innovative designs enhancing user interaction and functionality.">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
 
   <!-- favicon -->
 
