--- a/photography/index.html
+++ b/photography/index.html
@@ -16,20 +16,22 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="og:title" content="Photographic Artistry by Vicky Wang">
   <meta property="og:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/photography">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
+  <meta property="og:image"
+    content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/photography">
-  <meta property="twitter:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="twitter:title" content="Photographic Artistry by Vicky Wang">
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="twitter:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
+  <meta property="twitter:image"
+    content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
 
   <!-- favicon -->
 
@@ -105,8 +107,7 @@
         <ul class="nav-menu">
           <li class="nav-item inactive marginZero"><a href="/" class="nav-link box ">PROJECT</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/architecture"
-              class="nav-link box ">ARCHITECTURE</a>
+          <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box ">ARCHITECTURE</a>
           </li>
           <li class="nav-item active activeNav marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
           </li>
@@ -155,11 +156,12 @@
                 alt="Share">
               <div class="dropdownSM-content">
                 <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me/photography"
-                target="_blank">Share on LinkedIn</a>
-             
-                <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/thumbnail_mobile.svg&description=Photographic%20Artistry%20by%20Vicky%20Wang" target="_blank">
+                  target="_blank">Share on LinkedIn</a>
+
+                <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/thumbnail_mobile.svg&description=Photographic%20Artistry%20by%20Vicky%20Wang"
+                  target="_blank">
                   Share on Pinterest
-              </a>
+                </a>
               </div>
             </div>
 
@@ -650,8 +652,7 @@
   <div class="blankHM"></div>
 
   <div class="Grid Grid--full u-textCenter">
-
-    <ul class="tags">
+    <ul class="tags" id="TagsCloud">
 
       <li class="tag"><span class="box"> User-centered Design</span></li>
 
@@ -661,6 +662,8 @@
       <li class="tag"><span class="box"> Interaction Design</span></li>
 
       <li class="tag"><span class="box"> Product Design</span></li>
+      <li class="tag"><span class="box"> Service Design</span></li>
+
       <li class="tag"><span class="box"> Design Thinking</span></li>
       <li class="tag"><span class="box"> Surveys &#38; Questionnaires</span></li>
       <li class="tag"><span class="box"> Journey Mapping </span></li>
@@ -681,6 +684,11 @@
       <li class="tag"><span class="box"> Concept Testing</span></li>
       <li class="tag"><span class="box"> Usability Testing</span></li>
       <li class="tag"><span class="box"> Wireframing &#38; Prototyping</span></li>
+
+      <li class="tag"><span class="box"> SaaS Application Design</span></li>
+      <li class="tag"><span class="box"> B2B Application Design</span></li>
+      <li class="tag"><span class="box"> Consumer-Facing Design</span></li>
+
 
       <li class="tag"><span class="box"> Figma</span></li>
       <li class="tag"><span class="box"> Adobe CS </span></li>
