--- a/architecture/index.html
+++ b/architecture/index.html
@@ -1,90 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-    <!-- Basic Metadata -->
-    <link rel="canonical" href="https://vickywang.me/architecture">
-    <title>Architectural Portfolio - Vicky Wang </title>
-    <meta name="author" content="Vicky W.">
-    <meta name="description"
-      content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-    <!-- Open Graph / Facebook -->
-    <meta property="og:locale" content="en_US">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
-    <meta property="og:description"
-      content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-    <meta property="og:url" content="https://vickywang.me/architecture">
-    <meta property="og:site_name" content="Vicky's Website">
-    <meta property="og:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
-  
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://vickywang.me/architecture">
-    <meta property="twitter:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
-    <meta property="twitter:description"
-      content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-    <meta property="twitter:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
-  
-    <!-- favicon -->
-  
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-  
-  
-  
-    <!-- Google Font Preconnect-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Google Font Preconnect-->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet">
-    <!--sitewide font-family: 'Lato', sans-serif; -->
-    <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap"
-      rel="stylesheet">
-    <!--handwriting -  font-family: 'Caveat', sans-serif; -->
-    <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
-  
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-    <!--handwriting font-family: 'Indie Flower'; -->
-  
-    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-    <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
-  
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
-      integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA=="
-      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- crypto js -->
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <!--jQuery-->
-  
-    <!--aos-->
-    <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  
-  
-    <!-- google analytics-->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
-      gtag('js', new Date());
-  
-      gtag('config', 'G-E8YXDWJST2');
-    </script>
-  
-    <link rel="stylesheet" href="../main.css" />
-    <script type="text/javascript" src="../scripts.js"></script>
-    <script type="text/javascript" src="../scripts_project.js"></script>
-  </head>
+<head>
+
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Basic Metadata -->
+  <link rel="canonical" href="https://vickywang.me/architecture">
+  <title>Architectural Portfolio - Vicky Wang </title>
+  <meta name="author" content="Vicky W.">
+  <meta name="description"
+    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="og:description"
+    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta property="og:url" content="https://vickywang.me/architecture">
+  <meta property="og:site_name" content="Vicky's Website">
+  <meta property="og:image"
+    content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://vickywang.me/architecture">
+  <meta property="twitter:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="twitter:description"
+    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta property="twitter:image"
+    content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
+
+  <!-- favicon -->
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+
+
+
+  <!-- Google Font Preconnect-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Google Font Preconnect-->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <!--sitewide font-family: 'Lato', sans-serif; -->
+  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
+  <!--handwriting -  font-family: 'Caveat', sans-serif; -->
+  <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Indie Flower'; -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
+    integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- crypto js -->
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <!--jQuery-->
+
+  <!--aos-->
+  <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+
+  <!-- google analytics-->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-E8YXDWJST2');
+  </script>
+
+  <link rel="stylesheet" href="../main.css" />
+  <script type="text/javascript" src="../scripts.js"></script>
+  <script type="text/javascript" src="../scripts_project.js"></script>
+</head>
 
 <body>
   <!--progressBarScroll-->
@@ -149,12 +152,13 @@
                 alt="Share">
               <div class="dropdownSM-content">
                 <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me/architecture"
-                target="_blank">Share on LinkedIn</a>
-             
-                <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/thumbnail_mobile.svg&description=Architectural%20Portfolio%20-%20Vicky%20Wang" target="_blank">
+                  target="_blank">Share on LinkedIn</a>
+
+                <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/thumbnail_mobile.svg&description=Architectural%20Portfolio%20-%20Vicky%20Wang"
+                  target="_blank">
                   Share on Pinterest
-              </a>
-              
+                </a>
+
               </div>
             </div>
 
@@ -411,7 +415,7 @@
 
   <div class="Grid Grid--full u-textCenter">
 
-    <ul class="tags">
+    <ul class="tags" id="TagsCloud">
 
       <li class="tag"><span class="box"> User-centered Design</span></li>
 
@@ -421,6 +425,8 @@
       <li class="tag"><span class="box"> Interaction Design</span></li>
 
       <li class="tag"><span class="box"> Product Design</span></li>
+      <li class="tag"><span class="box"> Service Design</span></li>
+
       <li class="tag"><span class="box"> Design Thinking</span></li>
       <li class="tag"><span class="box"> Surveys &#38; Questionnaires</span></li>
       <li class="tag"><span class="box"> Journey Mapping </span></li>
@@ -441,6 +447,11 @@
       <li class="tag"><span class="box"> Concept Testing</span></li>
       <li class="tag"><span class="box"> Usability Testing</span></li>
       <li class="tag"><span class="box"> Wireframing &#38; Prototyping</span></li>
+
+      <li class="tag"><span class="box"> SaaS Application Design</span></li>
+      <li class="tag"><span class="box"> B2B Application Design</span></li>
+      <li class="tag"><span class="box"> Consumer-Facing Design</span></li>
+
 
       <li class="tag"><span class="box"> Figma</span></li>
       <li class="tag"><span class="box"> Adobe CS </span></li>
