--- a/glorify/index.html
+++ b/glorify/index.html
@@ -20,7 +20,8 @@
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/glorify">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
+  <meta property="og:image"
+    content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -28,7 +29,8 @@
   <meta property="twitter:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="twitter:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
+  <meta property="twitter:image"
+    content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
 
   <!-- favicon -->
 
@@ -143,15 +145,13 @@
             </div>
           </li>
 
-          <li class="nav-item inactive marginZero"><a href="/architecture"
-              class="nav-link box ">ARCHITECTURE</a>
+          <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box ">ARCHITECTURE</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/photography"
-              class="nav-link box ">PHOTOGRAPHY</a>
+          <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box ">PHOTOGRAPHY</a>
           </li>
           <li class="nav-item inactive marginZero"><a href="/blog" class="nav-link box ">BLOG</a>
           </li>
-          
+
           <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
           </li>
         </ul>
@@ -5184,9 +5184,7 @@
   <div class="blankHM"></div>
 
   <div class="Grid Grid--full u-textCenter">
-
-    <ul class="tags">
-
+    <ul class="tags" id="TagsCloud">
       <li class="tag"><span class="box"> User-centered Design</span></li>
 
       <li class="tag"><span class="box"> Experience Design</span></li>
@@ -5217,6 +5215,11 @@
       <li class="tag"><span class="box"> Concept Testing</span></li>
       <li class="tag"><span class="box"> Usability Testing</span></li>
       <li class="tag"><span class="box"> Wireframing &#38; Prototyping</span></li>
+
+      <li class="tag"><span class="box"> SaaS Application Design</span></li>
+      <li class="tag"><span class="box"> B2B Application Design</span></li>
+      <li class="tag"><span class="box"> Consumer-Facing Design</span></li>
+
 
       <li class="tag"><span class="box"> Figma</span></li>
       <li class="tag"><span class="box"> Adobe CS </span></li>
@@ -5276,128 +5279,128 @@
     </div>
   </button>
   <!--back to top-->
-<!--footer-->
-<footer class="GreyBg100">
+  <!--footer-->
+  <footer class="GreyBg100">
 
-  <div class="blankHS"></div>
-  <div class="wrapper">
-    <div class="element">
-
-      <div class="Grid Grid--gutters Grid--1of3">
-        <div class="Grid-cell">
-
-          <a href="/" class=""><img class="widthXXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-          <div class="blankHXS"></div>
-
-          <div class="Grid Grid--gutters">
-            <div class="ClipboardBoxIconOnly">
-              <button class="ClipboardIconOnly">
-                <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
-                  title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
-                <p class="clickIconCopy">vickyw.design@gmail.com</p>
-              </button>
-            </div>
-            <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
-            </a>
-
-            <a target="_blank" href="https://github.com/vicky-wyq">
-              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/git.svg" alt="GitHub"
-                title="GitHub">
-            </a>
-
-            <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
-            </a>
-
-            <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
-                title="Instagram">
-            </a>
-          </div>
-          <div class="blankHXS"></div>
-        </div>
-        <div class="Grid-cell">
-          <div class="Grid Grid--gutters Grid--cols-6">
-            <div class="Grid-cell">
-              <h5> <strong> Project </strong> </h5>
-              <div class="blankHXXS"></div>
-              <a href="/glorify/">
-                <h6 class="fontWeight400"> Glorify</h6>
-              </a>
-
-
-              <h6>Elevating Community Involvement</h6>
-              <div class="blankHXXS"></div>
-              <a href="/appointa/">
-                <h6 class="fontWeight400"> APPOINTA</h6>
-
-              </a>
-              <h6>Simplifying Interview Coordination</h6>
-              <div class="blankHXXS"></div>
-              <a href="/seer/">
-                <h6 class="fontWeight400">SEER</h6>
-
-              </a>
-              <h6>Empowering Brand Managers with Insights</h6>
-            </div>
-
-            <div class="Grid-cell">
-              <h5> <strong> Service </strong> </h5>
-              <div class="blankHXXS"></div>
-
-              <a href="/">
-                <h6 class="fontWeight400">UX/UI Design</h6>
-              </a>
-              <h6>Creating Intuitive User Experiences</h6>
-              <div class="blankHXXS"></div>
-
-              <a href="/">
-                <h6 class="fontWeight400">Design Research</h6>
-              </a>
-              <h6>In-depth Analysis for Targeted Solutions</h6>
-              <div class="blankHXXS"></div>
-              <a href="/">
-                <h6 class="fontWeight400">Web Development</h6>
-              </a>
-              <h6>Seamless Design Implementation</h6>
-              <div class="blankHXXS"></div>
-              <a href="/">
-                <h6 class="fontWeight400">Branding</h6>
-              </a>
-              <h6>Crafting Memorable Brand Identities</h6>
-            </div>
-
-            <div class="Grid-cell">
-              <h5> <strong> About </strong> </h5>
-              <div class="blankHXXS"></div>
-
-              <a href="/about">
-                <h6>About me</h6>
-              </a>
-              <a href="mailto:vickyw.design@gmail.com">
-                <h6>Email me</h6>
-              </a>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
     <div class="blankHS"></div>
-    <div class="Grid Grid--full wrapper">
-      <div class="Grid-cell">
-        <div class="footerBorder">
-          <div class="element">
-            <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+    <div class="wrapper">
+      <div class="element">
+
+        <div class="Grid Grid--gutters Grid--1of3">
+          <div class="Grid-cell">
+
+            <a href="/" class=""><img class="widthXXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+            <div class="blankHXS"></div>
+
+            <div class="Grid Grid--gutters">
+              <div class="ClipboardBoxIconOnly">
+                <button class="ClipboardIconOnly">
+                  <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                    title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
+                  <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                </button>
+              </div>
+              <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
+              </a>
+
+              <a target="_blank" href="https://github.com/vicky-wyq">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/git.svg" alt="GitHub"
+                  title="GitHub">
+              </a>
+
+              <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
+              </a>
+
+              <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
+                  title="Instagram">
+              </a>
+            </div>
+            <div class="blankHXS"></div>
+          </div>
+          <div class="Grid-cell">
+            <div class="Grid Grid--gutters Grid--cols-6">
+              <div class="Grid-cell">
+                <h5> <strong> Project </strong> </h5>
+                <div class="blankHXXS"></div>
+                <a href="/glorify/">
+                  <h6 class="fontWeight400"> Glorify</h6>
+                </a>
+
+
+                <h6>Elevating Community Involvement</h6>
+                <div class="blankHXXS"></div>
+                <a href="/appointa/">
+                  <h6 class="fontWeight400"> APPOINTA</h6>
+
+                </a>
+                <h6>Simplifying Interview Coordination</h6>
+                <div class="blankHXXS"></div>
+                <a href="/seer/">
+                  <h6 class="fontWeight400">SEER</h6>
+
+                </a>
+                <h6>Empowering Brand Managers with Insights</h6>
+              </div>
+
+              <div class="Grid-cell">
+                <h5> <strong> Service </strong> </h5>
+                <div class="blankHXXS"></div>
+
+                <a href="/">
+                  <h6 class="fontWeight400">UX/UI Design</h6>
+                </a>
+                <h6>Creating Intuitive User Experiences</h6>
+                <div class="blankHXXS"></div>
+
+                <a href="/">
+                  <h6 class="fontWeight400">Design Research</h6>
+                </a>
+                <h6>In-depth Analysis for Targeted Solutions</h6>
+                <div class="blankHXXS"></div>
+                <a href="/">
+                  <h6 class="fontWeight400">Web Development</h6>
+                </a>
+                <h6>Seamless Design Implementation</h6>
+                <div class="blankHXXS"></div>
+                <a href="/">
+                  <h6 class="fontWeight400">Branding</h6>
+                </a>
+                <h6>Crafting Memorable Brand Identities</h6>
+              </div>
+
+              <div class="Grid-cell">
+                <h5> <strong> About </strong> </h5>
+                <div class="blankHXXS"></div>
+
+                <a href="/about">
+                  <h6>About me</h6>
+                </a>
+                <a href="mailto:vickyw.design@gmail.com">
+                  <h6>Email me</h6>
+                </a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <div class="blankHS"></div>
+      <div class="Grid Grid--full wrapper">
+        <div class="Grid-cell">
+          <div class="footerBorder">
+            <div class="element">
+              <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
-</footer>
-<!--footer-->
+  </footer>
+  <!--footer-->
 
 
 </body>
