--- a/navigation/V3/index.html
+++ b/navigation/V3/index.html
@@ -9,24 +9,17 @@
   <!-- Basic Metadata -->
 
   <meta name="title" content="Vicky W. | UX Designer | Navigation V3">
-  <title>Vicky W. | UX Designer | Navigation V3 </title>
+  <title>Navigation V3 - Technological Solutions & User Interaction by Vicky Wang </title>
   <link rel="canonical" href="https://vickywang.me/navigation/V3/">
   <meta name="author" content="Vicky W.">
-
-  <meta name="keywords"
-    content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
-  <meta name="description"
-    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
-">
+  <meta name="description" content="Uncover the innovative Navigation V3 Innovations by Vicky Wang, blending technology with user interaction for optimal digital navigation experiences.">
 
 
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Vicky W. | UX Designer | Navigation">
-  <meta property="og:description"
-    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
-">
+  <meta property="og:title" content="Navigation V3 - Technological Solutions & User Interaction by Vicky Wang">
+  <meta property="og:description" content="Uncover the innovative Navigation V3 Innovations by Vicky Wang, blending technology with user interaction for optimal digital navigation experiences.">
   <meta property="og:url" content="https://vickywang.me/">
   <meta property="og:site_name" content="Vicky's Website">
   <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg">
@@ -34,10 +27,8 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/">
-  <meta property="twitter:title" content="Vicky W. | UX Designer | Navigation">
-  <meta property="twitter:description"
-    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
-">
+  <meta property="twitter:title" content="Navigation V3 - Technological Solutions & User Interaction by Vicky Wang">
+  <meta property="twitter:description" content="Uncover the innovative Navigation V3 Innovations by Vicky Wang, blending technology with user interaction for optimal digital navigation experiences.">
   <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg">
 
   <!-- favicon -->
@@ -157,15 +148,15 @@
   <nav class="header navbarN" id="header">
 
 
-    <div class="backgroundColorNav ">
-
-      <a href="/navigation/" class="centerVer logo pointer colorBlack Grid--center"><img class="moveLeftRight iconXS"
+    <div class="backgroundColorNav">
+      <a href="/navigation/" class=" pointer colorBlack"><img class="moveLeftRight iconS"
           src="../../icon/arrow-back.svg" alt="Go back">
-        <h5>BACK</h5>
+        <h6>BACK</h6>
       </a>
       <div class="navbar">
         <ul class="nav-menu">
           <li class="dropdown nav-item active  marginZero"><a href="/" class="nav-link box">PROJECT</a>
+
             <div class="dropdown-content">
               <a href="/glorify/">
                 <div class="cardBorder GLORIFY">
@@ -191,10 +182,9 @@
                   </div>
                 </div>
               </a>
-
               <a href="/design_system/">
                 <div class="cardBorder ">
-                  <img src="../../ProjectImages/Cover_portfolioWeb.png" alt="Design System">
+                  <img src="../../ProjectImages/Cover_portfolioWeb.svg" alt="Design System">
                   <div class="element">
                     <h5 class="colorBlack">Design System | vickywang.me</h5>
                   </div>
@@ -207,6 +197,9 @@
           </li>
           <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
           </li>
+          <li class="nav-item inactive marginZero"><a href="/blog" class="nav-link box ">BLOG</a>
+          </li>
+
           <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box">ABOUT</a></li>
         </ul>
       </div>
@@ -255,68 +248,73 @@
       </div>
     </div>
     <div class="blankHXS"></div>
+    <div class="wrapper">
 
-    <div class="Grid Grid--gutters Grid--cols-2 wrapper">
-      <div class="Grid-cell">
-        <div class="element">
 
-          <h3><strong>Main goal</strong></h3>
-          <h4>After conducting additional usability testing, I have refined the method of displaying content
-            in a single location, which is more organized and avoids the need for a lengthy list.
-          </h4>
+      <div class="Grid Grid--gutters Grid--cols-2">
+        <div class="Grid-cell">
+          <div class="element">
+
+            <h3><strong>Main goal</strong></h3>
+            <h4>After conducting additional usability testing, I have refined the method of displaying content
+              in a single location, which is more organized and avoids the need for a lengthy list.
+            </h4>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
+
+            <h3><strong>Breakdown</strong></h3>
+
+            <ul>
+              <li class="listCircle">Able to understand the context easily</li>
+              <li class="listCircle"> easily determine where the user is looking/reading </li>
+              <li class="listCircle"> skip or jump to the sections they are interested in </li>
+              <li class="listCircle">revisiting previous sections if desired</li>
+            </ul>
+          </div>
         </div>
       </div>
-      <div class="Grid-cell">
-        <div class="element">
+      <div class="blankHXS"></div>
 
-          <h3><strong>Breakdown</strong></h3>
+      <div class="Grid Grid--gutters Grid--cols-4">
+        <div class="Grid-cell">
+          <div class="element">
 
-          <ul>
-            <li class="listCircle">Able to understand the context easily</li>
-            <li class="listCircle"> easily determine where the user is looking/reading </li>
-            <li class="listCircle"> skip or jump to the sections they are interested in </li>
-            <li class="listCircle">revisiting previous sections if desired</li>
-          </ul>
+            <h3><strong>Duration</strong></h3>
+            <h4>April 2023 </h4>
+            <h4>3 Hours </h4>
+
+          </div>
         </div>
+        <div class="Grid-cell">
+          <div class="element">
+
+            <h3><strong>Team</strong></h3>
+            <h4>Individual work</h4>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
+
+            <h3><strong>Role</strong></h3>
+            <h4>Design</h4>
+            <h4>implement</h4>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
+            <h3><strong>Tool</strong></h3>
+            <h4>HTML CSS JS</h4>
+            <h4>VS Code, AWS S3</h4>
+          </div>
+        </div>
+
       </div>
+      <div class="blankHS"></div>
+
     </div>
-    <div class="blankHXS"></div>
 
-    <div class="Grid Grid--gutters Grid--cols-4 wrapper">
-      <div class="Grid-cell">
-        <div class="element">
-
-          <h3><strong>Duration</strong></h3>
-          <h4>April 2023 </h4>
-          <h4>3 Hours </h4>
-
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-
-          <h3><strong>Team</strong></h3>
-          <h4>Individual work</h4>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-
-          <h3><strong>Role</strong></h3>
-          <h4>Design</h4>
-          <h4>implement</h4>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <h3><strong>Tool</strong></h3>
-          <h4>HTML CSS JS</h4>
-          <h4>VS Code, AWS S3</h4>
-        </div>
-      </div>
-
-    </div>
-    <div class="blankHS"></div>
 
 
 
@@ -368,7 +366,8 @@
               <!-- Img -->
               <div class="Grid Grid--full u-textCenter">
                 <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
+                      alt="New User">
                   </div>
                 </div>
               </div>
@@ -418,7 +417,8 @@
 
               <div class="Grid Grid--full u-textCenter">
                 <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
+                      alt="New User">
                   </div>
                 </div>
               </div>
@@ -438,7 +438,8 @@
 
               <div class="Grid Grid--full u-textCenter">
                 <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
+                      alt="New User">
                   </div>
                 </div>
               </div>
@@ -447,7 +448,8 @@
 
               <div class="Grid Grid--full u-textCenter">
                 <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
+                      alt="New User">
                   </div>
                 </div>
               </div>
@@ -456,7 +458,8 @@
 
               <div class="Grid Grid--full u-textCenter">
                 <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
+                      alt="New User">
                   </div>
                 </div>
               </div>
@@ -486,7 +489,8 @@
 
               <div class="Grid Grid--full u-textCenter">
                 <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
+                      alt="New User">
                   </div>
                 </div>
               </div>
@@ -495,7 +499,8 @@
 
               <div class="Grid Grid--full u-textCenter">
                 <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
+                      alt="New User">
                   </div>
                 </div>
               </div>
@@ -513,7 +518,8 @@
 
               <div class="Grid Grid--full u-textCenter">
                 <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
+                      alt="New User">
                   </div>
                 </div>
               </div>
@@ -522,7 +528,8 @@
 
               <div class="Grid Grid--full u-textCenter">
                 <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
+                      alt="New User">
                   </div>
                 </div>
               </div>
@@ -574,28 +581,126 @@
 
 
 
-
   <!--footer-->
   <footer class="GreyBg100">
-    <div class="element">
-      <div class="footer">
-        <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
-        <div class="footer-right">
-          <a href="mailto:vickyw.design@gmail.com">
-            <img class="footer-logo" src="../../icon/mail.svg" alt="email">
-          </a>
-          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
-            <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
-          </a>
-          <a target="_blank" href="https://github.com/vicky-wyq">
-            <img class="footer-logo" src="../../icon/git.svg" alt="github">
-          </a>
-          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-            <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
-          </a>
+
+    <div class="blankHS"></div>
+    <div class="wrapper">
+      <div class="element">
+
+        <div class="Grid Grid--gutters Grid--1of3">
+          <div class="Grid-cell">
+
+            <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+            <div class="blankHXS"></div>
+
+            <div class="Grid Grid--gutters">
+              <div class="ClipboardBoxIconOnly">
+                <button class="ClipboardIconOnly">
+                  <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                    title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
+                  <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                </button>
+              </div>
+              <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
+              </a>
+
+              <a target="_blank" href="https://github.com/vicky-wyq">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub"
+                  title="GitHub">
+              </a>
+
+              <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
+              </a>
+
+              <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
+                  title="Instagram">
+              </a>
+            </div>
+            <div class="blankHXS"></div>
+          </div>
+          <div class="Grid-cell">
+            <div class="Grid Grid--gutters Grid--cols-6">
+              <div class="Grid-cell">
+                <h5> <strong> Project </strong> </h5>
+                <div class="blankHXXS"></div>
+                <a href="/glorify/">
+                  <h6 class="fontWeight400"> Glorify</h6>
+                </a>
+
+
+                <h6>Elevating Community Involvement</h6>
+                <div class="blankHXXS"></div>
+                <a href="/appointa/">
+                  <h6 class="fontWeight400"> APPOINTA</h6>
+
+                </a>
+                <h6>Simplifying Interview Coordination</h6>
+                <div class="blankHXXS"></div>
+                <a href="/seer/">
+                  <h6 class="fontWeight400">SEER</h6>
+
+                </a>
+                <h6>Empowering Brand Managers with Insights</h6>
+              </div>
+
+              <div class="Grid-cell">
+                <h5> <strong> Service </strong> </h5>
+                <div class="blankHXXS"></div>
+
+                <a href="/">
+                  <h6 class="fontWeight400">UX/UI Design</h6>
+                </a>
+                <h6>Creating Intuitive User Experiences</h6>
+                <div class="blankHXXS"></div>
+
+                <a href="/">
+                  <h6 class="fontWeight400">Design Research</h6>
+                </a>
+                <h6>In-depth Analysis for Targeted Solutions</h6>
+                <div class="blankHXXS"></div>
+                <a href="/">
+                  <h6 class="fontWeight400">Web Development</h6>
+                </a>
+                <h6>Seamless Design Implementation</h6>
+                <div class="blankHXXS"></div>
+                <a href="/">
+                  <h6 class="fontWeight400">Branding</h6>
+                </a>
+                <h6>Crafting Memorable Brand Identities</h6>
+              </div>
+
+              <div class="Grid-cell">
+                <h5> <strong> About </strong> </h5>
+                <div class="blankHXXS"></div>
+
+                <a href="/about">
+                  <h6>About me</h6>
+                </a>
+                <a href="mailto:vickyw.design@gmail.com">
+                  <h6>Email me</h6>
+                </a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <div class="blankHS"></div>
+      <div class="Grid Grid--full wrapper">
+        <div class="Grid-cell">
+          <div class="footerBorder">
+            <div class="element">
+              <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+
   </footer>
   <!--footer-->
 
